# mbmbm

./: INSTALL.md  LICENCE  README.md  dataset_selection.R  pyproject.toml
R_Scripts/: plotting_updated.R
doc/: train.md
example_scripts/: run_example_train.py  run_screening.py
example_scripts/config/: default.yaml
mbmbm/: __init__.py
mbmbm/attic/core/: benchmark.py
mbmbm/core/: dataset_provider.py  modelbase.py
mbmbm/featureengine/: featureenginebase.py  featureengines.py  featureengines_dim_reduce.py  util.py
mbmbm/featureengine/utils/: fcbf.py  indval.py
mbmbm/model/skorch/: classifier.py
mbmbm/plotting/: visualize_utils.py
mbmbm/scripts/: predict.py  train.py  utils.py  val.py
mbmbm/transform/: __init__.py  transformbase.py  transforms.py
mbmbm/utils/: chdir.py  exceptions.py  logging.py  metrics.py  plotting.py  str_enum.py
tests/: conftest.py
tests/benchmark/: test_benchmark.py
tests/core/: test_data_provider.py
tests/resources/configs/benchmark/: sklearn_basic.yaml  sklearn_basic_neural.yaml
tests/resources/configs/sklearn/: sklearn_basic.yaml  sklearn_basic_classif.yaml  sklearn_basic_neural.yaml  sklearn_basic_neural_classif.yaml  sklearn_basic_rfe.yaml  sklearn_basic_skorch_classif.yaml  sklearn_basic_w_transforms.yaml  sklearn_dimred_lda.yaml  sklearn_dimred_nmds.yaml  sklearn_dimred_nmf.yaml  sklearn_dimred_pca.yaml  sklearn_featsel_fcbf.yaml  sklearn_label_classif.yaml
tests/resources/datasets/ds_test_large/: config.yaml
tests/resources/datasets/ds_test_large/test/: metadata_test.csv
tests/resources/datasets/ds_test_small/: config.yaml
tests/resources/datasets/ds_test_small/test/: metadata_test.csv  otus_test.csv
tests/resources/datasets/ds_test_small/train/: metadata_train.csv
tests/sklearn/: test_dim_red.py  test_feature_select.py  test_sk_training.py  test_sk_training_classif.py  test_sk_validation.py
tests/transforms/: test_transforms.py
